feat(#61) : Manage back navigation to buildings list

--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -20,9 +20,9 @@
       <ion-grid>
         <ion-row no-padding class="other-data">
           <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose (click)="goBackToInspection()">
+            <button ion-button icon-left small full color="light" menuClose (click)="goBackToBuildingList()">
               <ion-icon name="undo"></ion-icon>
-              Retourner à l'inspection
+              Retourner à la liste des bâtiments
             </button>
           </ion-col>
         </ion-row>
