feat(#57) : Add clear button in searchBox
Add button to clear selected cross street

--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -7,9 +7,8 @@
     </ion-navbar>
 </ion-header>
 
-
 <ion-content>
-    <form novalidate (ngSubmit)="onSubmit(planForm)" [formGroup]="planForm" style="padding:0px; margin-top:-3px">
+    <form novalidate [formGroup]="planForm" style="padding:0px; margin-top:-3px">
 
         <ion-list class="list-items">
 
