--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -57,8 +57,8 @@
   </ion-list>
 </ion-content>
 
-<ion-footer class="page-footer">
-  <ion-navbar *ngIf="!isNew">
+<ion-footer class="page-footer" *ngIf="!isNew">
+  <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeleteSprinkler()">
         <ion-icon name="trash"></ion-icon>
