--- a/src/pages/building-alarm-panels/building-alarm-panels.html
+++ b/src/pages/building-alarm-panels/building-alarm-panels.html
@@ -44,8 +44,8 @@
   </ion-list>
 </ion-content>
 
-<ion-footer class="page-footer">
-  <ion-navbar *ngIf="!isNew">
+<ion-footer class="page-footer" *ngIf="!isNew">
+  <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeleteAlarmPanel()">
         <ion-icon name="trash"></ion-icon>
