--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -84,9 +84,9 @@
   </ion-list>
 </ion-content>
 
-<ion-footer class="page-footer">
+<ion-footer class="page-footer" *ngIf="!isNew">
 
-  <ion-navbar *ngIf="!isNew">
+  <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeleteContact()">
         <ion-icon name="trash"></ion-icon>
