--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -1,6 +1,7 @@
 <ion-header class="page-header">
 
   <ion-navbar>
+    <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>Liste des inspections</ion-title>
   </ion-navbar>
 
