feat(#84): Add InspectionListMenu validation

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="myhomecontent" [persistent]="true">
+<ion-menu [content]="myhomecontent" id="inspectionListMenu">
     <ion-header>
         <menu-profile></menu-profile>
     </ion-header>
