--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
@@ -6,6 +6,6 @@
 </ion-header>
 
 <ion-content ion-fixed>
-  <picture-viewer [ngModel]="picture" (ngModelChange)="onModelChange($event)" (json)="onJsonChanged($event)">
+  <picture-viewer  [(ngModel)]="picture" (json)="onJsonChanged($event)" (ngModelChange)="onModelChange($event)">
   </picture-viewer>
 </ion-content>
