--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -25,7 +25,7 @@
           <ion-col no-padding class="column">
             <button ion-button icon-left small full color="light" menuClose (click)="goBackToInspectionList()">
               <ion-icon name="close-circle"></ion-icon>
-              Sortir de l'inspection
+              {{'inspectionQuit' | translate}}
             </button>
           </ion-col>
         </ion-row>
