--- a/src/pages/intervention-buildings/intervention-buildings.html
+++ b/src/pages/intervention-buildings/intervention-buildings.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
-      Liste des bâtiments
+      {{'buildingList' | translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
