--- a/src/pages/intervention-water-supplies/intervention-water-supplies.html
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.html
@@ -1,9 +1,7 @@
 <ion-header class="page-header">
     <ion-navbar>
         <ion-icon name="menu" menuToggle left></ion-icon>
-        <ion-title>
-          Liste des bornes
-        </ion-title>
+        <ion-title>{{'fireHydrantList' | translate}}</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -34,7 +32,7 @@
       <ion-buttons>
       <button ion-button icon-left (click)="onItemClick(plan?.idCity)">
         <ion-icon name="add-circle"></ion-icon>
-        Ajouter...
+        {{'add' | translate}}...
       </button>
       </ion-buttons>
     </ion-toolbar>
