--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -1,9 +1,7 @@
 <ion-header class="page-header">
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
-    <ion-title>
-      Parcours
-    </ion-title>
+    <ion-title>{{'course' |translate}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -21,7 +19,7 @@
     <ion-buttons>
       <button ion-button icon-start type="button" (click)="onItemClick(null)">
         <ion-icon name="add-circle"></ion-icon>
-        Ajouter...
+        {{'add' |translate}}...
       </button>
     </ion-buttons>
   </ion-toolbar>
