--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
@@ -1,17 +1,10 @@
 <ion-header class="page-header">
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
-    <ion-title>
-      Plan d'implantation
-    </ion-title>
+    <ion-title>{{'implantationPlan' | translate}}</ion-title>
   </ion-navbar>
 </ion-header>
-
-
 <ion-content [formGroup]="form" ion-fixed>
-  <!--<ion-list class="list-items">
-    <ion-list-header>{{plan?.mainBuildingAddress}}</ion-list-header>
-  </ion-list>-->
   <picture-viewer formControlName="picture">
   </picture-viewer>
 </ion-content>
