--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -36,7 +36,7 @@
             </ion-item>
 
             <ion-item>
-                <ion-label fixed>{{'street' | translate}}</ion-label>
+                <ion-label fixed>{{'lane' | translate}}</ion-label>
                 <ion-input type="text" disabled value="{{laneName}}"></ion-input>
             </ion-item>
 
