feat(#101) Add translation to PNAP

--- a/src/pages/building-pnap-detail/building-pnap-detail.html
+++ b/src/pages/building-pnap-detail/building-pnap-detail.html
@@ -5,7 +5,7 @@
         <ion-icon name="arrow-back"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title>Édition du PNAP</ion-title>
+    <ion-title>{{'pnapDetail' | translate}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,82 +14,82 @@
   <ion-list [formGroup]="form" class="list-items">
 
     <ion-item-group>
-      <ion-item-divider>Informations générales</ion-item-divider>
+      <ion-item-divider>{{'generalInformation' | translate}}</ion-item-divider>
       <ion-item [class.invalid]="!form.controls.idPersonRequiringAssistanceType.valid">
-        <ion-label>Type</ion-label>
+        <ion-label>{{'type' | translate}}</ion-label>
         <ion-select formControlName="idPersonRequiringAssistanceType">
           <ion-option *ngFor="let t of pnapTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
-      <div *ngIf="!form.controls.idPersonRequiringAssistanceType.valid" class="validation-error-text">*Le type est requis.</div>
+      <div *ngIf="!form.controls.idPersonRequiringAssistanceType.valid" class="validation-error-text">{{'typeRequired' | translate}}</div>
       <ion-item>
-        <ion-label>Nom</ion-label>
-        <ion-input item-end formControlName="personName" maxlength="60" type="text" placeholder="Nom de la personne"></ion-input>
+        <ion-label>{{'lastName' | translate}}</ion-label>
+        <ion-input item-end formControlName="personName" maxlength="60" type="text" placeholder="{{'pnapDetailNameHolder' | translate}}"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Étage</ion-label>
-        <ion-input formControlName="floor" max="3" placeholder="Étage" type="text"></ion-input>
+        <ion-label>{{'floor' | translate}}</ion-label>
+        <ion-input formControlName="floor" max="3" placeholder="{{'floor' | translate}}" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Local</ion-label>
-        <ion-input formControlName="local" max="10" placeholder="Local" type="text"></ion-input>
+        <ion-label>{{'room' | translate}}</ion-label>
+        <ion-input formControlName="local" max="10" placeholder="{{'room' | translate}}" type="text"></ion-input>
       </ion-item>
     </ion-item-group>
 
     <ion-item-group>
-      <ion-item-divider>Contact</ion-item-divider>
+      <ion-item-divider>{{'contact' | translate}}</ion-item-divider>
       <ion-item>
-        <ion-label>Nom</ion-label>
-        <ion-input formControlName="contactName" maxlength="60" type="text" placeholder="Nom du contact"></ion-input>
+        <ion-label>{{'lastName' | translate}}</ion-label>
+        <ion-input formControlName="contactName" maxlength="60" type="text" placeholder="{{'pnapDetailContactNameHolder' | translate}}"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Téléphone</ion-label>
+        <ion-label>{{'phone' | translate}}</ion-label>
         <ion-input placeholder="(xxx) xxx-xxxxx" [brmasker]="{mask:'(000) 000-0000', len:14, type:'num'}" type="text" formControlName="contactPhoneNumberMasked"></ion-input>
       </ion-item>
     </ion-item-group>
 
     <ion-item-group>
-      <ion-item-divider>Résidents de jour</ion-item-divider>
+      <ion-item-divider>{{'pnapDayResident' | translate}}</ion-item-divider>
       <ion-item [class.invalid]="!form.controls.dayResidentCount.valid">
-        <ion-label>Nombre</ion-label>
-        <ion-input type="tel" [pattern]="integerPattern" formControlName="dayResidentCount" placeholder="Nombre"></ion-input>
+        <ion-label>{{'pnapNumber' | translate}}</ion-label>
+        <ion-input type="tel" [pattern]="integerPattern" formControlName="dayResidentCount" placeholder="{{'pnapNumber' | translate}}"></ion-input>
       </ion-item>
-      <div *ngIf="!form.controls.dayResidentCount.valid" class="validation-error-text">*La quantité doit être une valeur entière valide.</div>
+      <div *ngIf="!form.controls.dayResidentCount.valid" class="validation-error-text">{{'pnapNumberValidationMessage' | translate}}</div>
       <ion-item>
-        <ion-label>Approximatif</ion-label>
+        <ion-label>{{'approximate' | translate}}</ion-label>
         <ion-toggle formControlName="dayIsApproximate"></ion-toggle>
       </ion-item>
     </ion-item-group>
 
     <ion-item-group>
-      <ion-item-divider>Résidents de soir</ion-item-divider>
+      <ion-item-divider>{{'pnapEveningResident' | translate}}</ion-item-divider>
       <ion-item [class.invalid]="!form.controls.eveningResidentCount.valid">
-        <ion-label>Nombre</ion-label>
-        <ion-input type="tel" [pattern]="integerPattern" formControlName="eveningResidentCount" placeholder="Nombre"></ion-input>
+        <ion-label>{{'pnapNumber' | translate}}</ion-label>
+        <ion-input type="tel" [pattern]="integerPattern" formControlName="eveningResidentCount" placeholder="{{'pnapNumber' | translate}}"></ion-input>
       </ion-item>
-      <div *ngIf="!form.controls.eveningResidentCount.valid" class="validation-error-text">*La quantité doit être une valeur entière valide.</div>
+      <div *ngIf="!form.controls.eveningResidentCount.valid" class="validation-error-text">{{'pnapNumberValidationMessage' | translate}}</div>
       <ion-item>
-        <ion-label>Approximatif</ion-label>
+        <ion-label>{{'approximate' | translate}}</ion-label>
         <ion-toggle formControlName="eveningIsApproximate"></ion-toggle>
       </ion-item>
     </ion-item-group>
 
     <ion-item-group>
-      <ion-item-divider>Résidents de soir</ion-item-divider>
+      <ion-item-divider>{{'pnapNightResident' | translate}}</ion-item-divider>
       <ion-item [class.invalid]="!form.controls.nightResidentCount.valid">
-        <ion-label>Nombre</ion-label>
-        <ion-input type="tel" [pattern]="integerPattern" formControlName="nightResidentCount" placeholder="Nombre"></ion-input>
+        <ion-label>{{'pnapNumber' | translate}}</ion-label>
+        <ion-input type="tel" [pattern]="integerPattern" formControlName="nightResidentCount" placeholder="{{'pnapNumber' | translate}}"></ion-input>
       </ion-item>
-      <div *ngIf="!form.controls.nightResidentCount.valid" class="validation-error-text">*La quantité doit être une valeur entière valide.</div>
+      <div *ngIf="!form.controls.nightResidentCount.valid" class="validation-error-text">{{'pnapNumberValidationMessage' | translate}}</div>
       <ion-item>
-        <ion-label>Approximatif</ion-label>
+        <ion-label>{{'approximate' | translate}}</ion-label>
         <ion-toggle formControlName="nightIsApproximate"></ion-toggle>
       </ion-item>
     </ion-item-group>
 
     <ion-item-group>
-      <ion-item-divider>Description</ion-item-divider>
-      <ion-textarea maxlength="500" formControlName="description"></ion-textarea>
+      <ion-item-divider>{{'description' | translate}}</ion-item-divider>
+      <ion-textarea maxlength="500" formControlName="description" placeholder="{{'description' | translate}}"></ion-textarea>
     </ion-item-group>
   </ion-list>
 </ion-content>
@@ -99,7 +99,7 @@
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeletePnap()">
         <ion-icon name="trash"></ion-icon>
-        Supprimer ce PNAP
+        {{'pnapDeleteButton' | translate}}
       </button>
     </ion-buttons>
   </ion-navbar>
