--- a/src/pages/building-pnaps/building-pnaps.html
+++ b/src/pages/building-pnaps/building-pnaps.html
@@ -2,18 +2,14 @@
 <ion-header class="page-header">
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
-    <ion-title>
-      Pnaps du bâtiment
-    </ion-title>
+    <ion-title>{{'buildingPnaps' | translate}}</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content>
   <ion-list class="list-items">
-    <ion-list-header>
-      PNAPS du bâtiment
-    </ion-list-header>
+    <ion-list-header>PNAPS</ion-list-header>
     <button ion-item icon-start *ngFor="let pnap of pnaps | orderBy:'typeDescription'" (click)="onItemClick(pnap.id)" detail-push>
       <ion-icon name="contact" item-start></ion-icon>
       <h2>{{pnap.typeDescription}}</h2>
@@ -28,7 +24,7 @@
     <ion-buttons>
       <button ion-button icon-start full type="button" (click)="onItemClick(null)">
         <ion-icon name="add-circle"></ion-icon>
-        Ajouter un PNAP...
+        {{'addPnapButton' | translate}}
       </button>
     </ion-buttons>
   </ion-toolbar>
