--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -1,128 +1,141 @@
 <ion-header class="page-header">
-  <ion-navbar>
-    <ion-buttons left>
-      <button ion-button  icon-only (click)="onCancelEdition()">
-        <ion-icon name="arrow-back"></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-title>Édition de la matière</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-buttons left>
+            <button ion-button icon-only (click)="onCancelEdition()">
+                <ion-icon name="arrow-back"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-title>{{'hazardousMaterialDetail' | translate}}</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content>
 
-  <ion-list [formGroup]="form" class="list-items">
-    <ion-item-group>
-      <ion-item-divider>Produit</ion-item-divider>
-      <button ion-item icon-end (click)="onChangeMaterial()" [class.invalid]="!form.controls.idHazardousMaterial.valid">
-        {{getSelectedMaterialDescription()}}
-      </button>
-      <div *ngIf="!form.controls.idHazardousMaterial.valid" class="validation-error-text">*La matière est requise.</div>
-    </ion-item-group>
+    <ion-list [formGroup]="form" class="list-items">
+        <ion-item-group>
+            <ion-item-divider>{{'product' | translate}}</ion-item-divider>
+            <button ion-item icon-end (click)="onChangeMaterial()"
+                    [class.invalid]="!form.controls.idHazardousMaterial.valid">
+                {{getSelectedMaterialDescription()}}
+            </button>
+            <div *ngIf="!form.controls.idHazardousMaterial.valid" class="validation-error-text">
+                {{'productRequired' | translate}}
+            </div>
+        </ion-item-group>
 
-    <ion-item-group>
-      <ion-item-divider>Contenant</ion-item-divider>
-      <ion-item [class.invalid]="!form.controls.quantityMasked.valid">
-        <ion-label>Quantité</ion-label>
-        <ion-input type="tel" [pattern]="integerPattern" formControlName="quantityMasked"></ion-input>
-      </ion-item>
-      <div *ngIf="!form.controls.quantityMasked.valid" class="validation-error-text">*La quantité doit être une valeur entière valide..</div>
-      <ion-item>
-        <ion-label>Type</ion-label>
-        <ion-input type="text" formControlName="container"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Réservoir</ion-label>
-        <ion-select formControlName="tankTypeMasked">
-          <ion-option value="0">Indéterminé</ion-option>
-          <ion-option value="1">Sous-terre</ion-option>
-          <ion-option value="2">Hors-terre</ion-option>
-        </ion-select>
-      </ion-item>
-      <ion-item>
-        <ion-label>Alimentation</ion-label>
-        <ion-input type="text" maxlength="50" formControlName="supplyLine"></ion-input>
-      </ion-item>
-
-    </ion-item-group>
-
-    <ion-item-group>
-      <ion-item-divider>Capacité du contenant</ion-item-divider>
-      <ion-grid>
-        <ion-row>
-          <ion-col width-50>
+        <ion-item-group>
+            <ion-item-divider>{{'container' | translate}}</ion-item-divider>
+            <ion-item [class.invalid]="!form.controls.quantityMasked.valid">
+                <ion-label>{{'quantity' | translate}}</ion-label>
+                <ion-input type="tel" [pattern]="integerPattern" formControlName="quantityMasked"></ion-input>
+            </ion-item>
+            <div *ngIf="!form.controls.quantityMasked.valid" class="validation-error-text">
+                {{'quantityValidationMessage' | translate}}
+            </div>
             <ion-item>
-              <ion-input item-end type="number" [pattern]="decimalPattern" placeholder="Capacité" formControlName="capacityContainerMasked"></ion-input>
+                <ion-label>Type</ion-label>
+                <ion-input type="text" formControlName="container"></ion-input>
             </ion-item>
-          </ion-col>
-          <ion-col width-50>
-            <ion-item [class.invalid]="!form.controls.idUnitOfMeasure.valid">
-              <ion-select formControlName="idUnitOfMeasure" placeholder="Unité de mesure">
-                <ion-option *ngFor="let unit of unitOfMeasures" [value]="unit.id">{{unit.name}}</ion-option>
-              </ion-select>
+            <ion-item>
+                <ion-label>{{'tank' | translate}}</ion-label>
+                <ion-select formControlName="tankTypeMasked">
+                    <ion-option value="0">{{'tankTypeUndetermined' | translate}}</ion-option>
+                    <ion-option value="1">{{'tankTypeUnderGround' | translate}}</ion-option>
+                    <ion-option value="2">{{'tankTypeAboveGround' | translate}}</ion-option>
+                </ion-select>
             </ion-item>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+            <ion-item>
+                <ion-label>{{'supply' | translate}}</ion-label>
+                <ion-input type="text" maxlength="50" formControlName="supplyLine"></ion-input>
+            </ion-item>
 
-    </ion-item-group>
+        </ion-item-group>
 
-    <div *ngIf="!form.controls.idUnitOfMeasure.valid" class="validation-error-text">*L'unité de mesure est requise lorsque la capacité est plus grande que zéro.</div>
-    <div *ngIf="!form.controls.capacityContainerMasked.valid" class="validation-error-text">*La capacité doit être une valeur décimale de format valide.</div>
+        <ion-item-group>
+            <ion-item-divider>{{'containerCapacity' | translate}}</ion-item-divider>
+            <ion-grid>
+                <ion-row>
+                    <ion-col width-50>
+                        <ion-item>
+                            <ion-input item-end type="number" [pattern]="decimalPattern"
+                                       placeholder="{{'capacity' | translate}}"
+                                       formControlName="capacityContainerMasked"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                    <ion-col width-50>
+                        <ion-item [class.invalid]="!form.controls.idUnitOfMeasure.valid">
+                            <ion-label [hidden]="true">{{'unit' | translate}}</ion-label>
+                            <ion-select class="unit-select" formControlName="idUnitOfMeasure" placeholder="{{'unit' | translate}}">
+                                <ion-option *ngFor="let unit of unitOfMeasures" [value]="unit.id">{{unit.name}}
+                                </ion-option>
+                            </ion-select>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+
+        </ion-item-group>
+
+        <div *ngIf="!form.controls.idUnitOfMeasure.valid" class="validation-error-text">
+            {{'containerUnitRequired' | translate}}
+        </div>
+        <div *ngIf="!form.controls.capacityContainerMasked.valid" class="validation-error-text">
+            {{'containerCapacityValidationMessage' | translate}}
+        </div>
 
 
-    <ion-item-group>
-      <ion-item-divider>Localisation</ion-item-divider>
-      <ion-item>
-        <ion-label >Endroit</ion-label>
-        <ion-input type="text" maxlength="100" formControlName="place"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Étage</ion-label>
-        <ion-input type="number" maxlength="4" formControlName="floor"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Mur</ion-label>
-        <ion-select formControlName="wall">
-          <ion-option *ngFor="let wall of walls">{{wall}}</ion-option>
-        </ion-select>
-      </ion-item>
-      <ion-item>
-        <ion-label>Section</ion-label>
-        <ion-select formControlName="sector">
-          <ion-option *ngFor="let sector of sectors">{{sector}}</ion-option>
-        </ion-select>
-      </ion-item>
-      <ion-item>
-        <ion-label>Entrée gaz</ion-label>
-        <ion-input type="text" maxlength="100" formControlName="gasInlet"></ion-input>
-      </ion-item>
-    </ion-item-group>
-    <ion-item-group>
-      <ion-item-divider>Périmètre de sécurité</ion-item-divider>
-      <ion-item>
-        <ion-textarea formControlName="securityPerimeter"></ion-textarea>
-      </ion-item>
-    </ion-item-group>
+        <ion-item-group>
+            <ion-item-divider>{{'localization' | translate}}</ion-item-divider>
+            <ion-item>
+                <ion-label>{{'position' | translate}}</ion-label>
+                <ion-input type="text" maxlength="100" formControlName="place"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label>{{'floor' | translate}}</ion-label>
+                <ion-input type="number" maxlength="4" formControlName="floor"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label>{{'wall' | translate}}</ion-label>
+                <ion-select formControlName="wall">
+                    <ion-option *ngFor="let wall of walls">{{wall}}</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>{{'division' | translate}}</ion-label>
+                <ion-select formControlName="sector">
+                    <ion-option *ngFor="let sector of sectors">{{sector}}</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>{{'gasInlet' | translate}}</ion-label>
+                <ion-input type="text" maxlength="100" formControlName="gasInlet"></ion-input>
+            </ion-item>
+        </ion-item-group>
+        <ion-item-group>
+            <ion-item-divider>{{'securityPerimeter' | translate}}</ion-item-divider>
+            <ion-item>
+                <ion-textarea formControlName="securityPerimeter"></ion-textarea>
+            </ion-item>
+        </ion-item-group>
 
-    <ion-item-group>
-      <ion-item-divider>Autres informations</ion-item-divider>
-      <ion-item>
-        <ion-textarea formControlName="otherInformation"></ion-textarea>
-      </ion-item>
-    </ion-item-group>
+        <ion-item-group>
+            <ion-item-divider>{{'otherInformation' | translate}}</ion-item-divider>
+            <ion-item>
+                <ion-textarea formControlName="otherInformation"></ion-textarea>
+            </ion-item>
+        </ion-item-group>
 
-  </ion-list>
+    </ion-list>
 
 </ion-content>
 
 <ion-footer class="page-footer" *ngIf="!isNew">
-  <ion-navbar>
-    <ion-buttons left>
-      <button ion-button icon-start (click)="onDeleteHazardousMaterial()">
-        <ion-icon name="trash"></ion-icon>
-        Supprimer cette matière
-      </button>
-    </ion-buttons>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-buttons left>
+            <button ion-button icon-start (click)="onDeleteHazardousMaterial()">
+                <ion-icon name="trash"></ion-icon>
+                {{'hazardousMaterialDelete' | translate}}
+            </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-footer>
