--- a/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
+++ b/src/pages/intervention-implantation-plan-sketch/intervention-implantation-plan-sketch.html
@@ -1,34 +1,50 @@
-<!--
-  Generated template for the InterventionImplantationPlanSketchPage page.
+<!-- Generated template for the InterventionImplantationPlanSketchPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
+  Ionic pages and navigation. -->
 <ion-header>
 
     <ion-navbar>
-      <ion-title>Éditer l'image</ion-title>
+        <ion-title>Éditer l'image</ion-title>
     </ion-navbar>
 
-  </ion-header>
+</ion-header>
 
+<ion-content
+    padding
+    scroll="false"
+>
 
-  <ion-content padding>
-
-    <div ion-fixed class="div-sketch-tool">
-      <lib-mobile-sketch-tool [imageData]="pictureUri" [loadedJson]="sketchJson" (canvas)="onCanvasChange($event)"></lib-mobile-sketch-tool>
+    <div
+        ion-fixed
+        class="div-sketch-tool"
+    >
+        <lib-mobile-sketch-tool
+            [imageData]="pictureUri"
+            [loadedJson]="sketchJson"
+            (canvas)="onCanvasChange($event)"
+        ></lib-mobile-sketch-tool>
     </div>
 
-  </ion-content>
+</ion-content>
 
-  <ion-footer>
-      <ion-buttons center >
-          <button ion-button class="loginnavbtn" (click)="onOkay()">
-              OK
+<ion-footer>
+    <ion-toolbar color="caucaRed">
+        <ion-buttons>
+            <button
+                ion-button
+                class="loginnavbtn"
+                (click)="onOkay()"
+            >
+                OK
             </button>
-          <button ion-button class="loginnavbtn" (click)="onCancel()">
-            Cancel
-          </button>
-          </ion-buttons>
-  </ion-footer>
-
+            <button
+                ion-button
+                class="loginnavbtn"
+                (click)="onCancel()"
+            >
+                Cancel
+            </button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-footer>
